--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/static/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>EJS Welcome to <%= title %></p>
-  </body>
+
+<head>
+  <title><%= title %></title>
+  <link rel='stylesheet' href='/static/stylesheets/style.css' />
+</head>
+
+<body>
+  <h1><%= title %></h1>
+  <p>EJS Welcome to <%= title %></p>
+</body>
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+  window.onload = async () => {
+    let core = new Core()
+    let data = await core.getconfig()
+    console.log("data",data)
+  }
+  function Core() {
+  }
+  Core.prototype.getconfig = async () => {
+    try {
+      let res = await axios.get("/news")
+      console.log(res)
+      return res.data
+    } catch (err) {
+      console.log(err)
+    }
+  }
+</script>
+
 </html>
